tests/typing/good/testfile-bounds-12.scala

class E { def foo[A<:Nothing](a: A) : Nothing = a }
object Main { def main(args: Array[String]) { } }
