tests/typing/bad/testfile-extends_string-1.scala
class A extends String { }
object Main { def main(args: Array[String]) { } }
